# beluga-vocalizations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run-check.yml
notebooks/: aves_representations.ipynb  dimensionality_reduction.ipynb
scripts/: create_recordings_df.py  get_AVES_embeddings.py  run_tsne.py
src/beluga_vocalizations/: data_loading.py  model_loading.py  paths.py
tests/: base.py  test_paths.py
