[tool.poetry]
name = "beluga-vocalizations"
version = "0.1.0"
description = ""
authors = ["mdhk <mariannedhk@gmail.com>"]
readme = "README.md"
packages = [{include = "beluga_vocalizations", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchaudio = "^2.2.0"
librosa = "^0.10.1"
sox = "^1.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.2.2"
pytest = "^8.0.1"
pre-commit = "^3.6.1"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
lint.select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
